# Monopoly

./: ..travis.yml.un~  .gitignore  .travis.yml  Board Data.xlsx  Board Space Distribution.xlsx  Changes to Monopoly Model.odt  Confidence Interval for S_10000.ods  Confidence Interval for S_20000.ods  Confidence Interval for S_5000.ods  McKenzie.py  Mmonopoly.py  Mmonopoly2.py  Monopoly Profiles.docx  Monopoly Program Description.docx  PLmonopoly.py  PLmonopoly_nw.py  PPTestScript.py  PPTestScript.py~  PPTestScript_old.py  PageRankEnd_Matrix.csv  PageRankStart_Matrix.csv  README.md  Untitled.ipynb  Untitled0.ipynb  __init__.py  additiveMeasure.py  adjTradeMatrix.csv  analyzeStalemates.py  analyzeStalemates2.py  analyzeStalemates3.py  analyzeStalematesWithSystem.py  analyzeStalematesWithSystemFinder.py  andrea.py  bestMatrixConstants.py  bestStatic.py  bestStaticApproxForDynamic.py  blank.py  boardlocation.cpp  brute_force000.csv  buyingThresholdGrid.py  (+98 more)
c++/: .cproject  .gitignore  .player.cpp.swp  CMakeLists.txt  Doxyfile.in  boardlocation.cpp  boardlocation.h  game.cpp  game.h  main.cpp  moneypool.cpp  moneypool.h  player.cpp  player.h  runner.py  success.cpp  success.h
c++/Debug/: Monopoly  boardlocation.d  game.d  main.d  makefile  moneypool.d  player.d  subdir.mk  success.d
c++/doc/html/: annotated.html  boardlocation_8h_source.html  classBoardLocation-members.html  classBoardLocation.html  classCSV-members.html  classCSV.html  classGame-members.html  classGame.html  classMoneyPool-members.html  classMoneyPool.html  classPlayer-members.html  classPlayer.html  classes.html  csv_8h_source.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_02360bd02ac1201056da1daa384a18e9.html  dir_1699be727a800b1d059c6f7f2b91d2ee.html  dir_3de45fbf08d2e79aacff2f4de113ab26.html  dir_49c3c3cd16fa58b440fa10c40ac8a7af.html  dir_50afbd2aac70a0a15e1fe30f7449a8ed.html  dir_586ad3c2f85d776b984733890d824e3e.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_83e2d55a1fa4ef84a58bad1a77e1b285.html  dir_b7878ad5ecbf2506f4125b9d34c97e45.html  dir_c11585c305b8de8656d91aed4c18e6b8.html  dir_c9b6658d3de3d98bf52b2c7b15c321a8.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_db020283538f0008ef7319d9c802c6ec.html  dir_ece6c8c331d1368a4f7abdf0965b24e2.html  dir_f307a46daed1218fee22380d1eacedba.html  files.html  functions.html  functions_func.html  game_8h_source.html  index.html  moneypool_8h_source.html  player_8h_source.html  structendReport-members.html  structendReport.html  success_8h_source.html
c++/doc/latex/: annotated.tex  classBoardLocation.tex  classCSV.tex  classGame.tex  classMoneyPool.tex  classPlayer.tex  dir_02360bd02ac1201056da1daa384a18e9.tex  dir_1699be727a800b1d059c6f7f2b91d2ee.tex  dir_3de45fbf08d2e79aacff2f4de113ab26.tex  dir_49c3c3cd16fa58b440fa10c40ac8a7af.tex  dir_586ad3c2f85d776b984733890d824e3e.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_b7878ad5ecbf2506f4125b9d34c97e45.tex  dir_c11585c305b8de8656d91aed4c18e6b8.tex  (+11 more)
c++/src/: CMakeLists.txt  boardlocation.cpp  game.cpp  main.cpp  moneypool.cpp  player.cpp  success.cpp
(+464 files in other folders)
